complete deletting
