# docs/swagger.yaml
@@ -179,4 +179,40 @@ paths:
                 type: string
       tags:
       - auth
-
+  /driver:
+    delete: 
+      produces:
+      - application/json
+      responses:
+        '200':
+          description: OK
+        "400":
+          description: Driver does not exist
+          schema:
+            type: object
+            properties:
+              error: 
+                type: string
+        "401":
+          description: Token expired
+          schema:
+            type: object
+            properties:
+              error: 
+                type: string
+        "403":
+          description: Incorrect token
+          schema:
+            type: object
+            properties:
+              error: 
+                type: string
+        "500":
+          description: Unexpected server error
+          schema:
+            type: object
+            properties:
+              error: 
+                type: string
+      tags:
+      - driver
